--- a/resource/common.css
+++ b/resource/common.css
@@ -138,6 +138,11 @@ body {
   z-index: -1;
 }
 
+.pf-img-4 {
+  top:22%;
+  left:76.5%;
+}
+
 .portfolio {
   margin-left:390px;
   margin-top:150px;
