--- a/resource/common.css
+++ b/resource/common.css
@@ -15,9 +15,8 @@
 }
 
 @font-face {
-  font-family: "GmarketSansMedium";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
-    format("woff");
+  font-family: 'DungGeunMo';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/DungGeunMo.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -135,18 +134,68 @@ body {
 
 /* 자기소개 */
 .am-img-1 {
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
+  width:1209px;
+  height: 580px;
+  background-image: url(img/2-1.png);
+  margin-top: 10%;
+  margin-left: 30%;
+  cursor: pointer;
 }
 
-.am-img-2 {
+.popup {
+  position:absolute;
+  display: none;
+  width:783px;
+  height: 697px;
+  background-image: url(img/2-2.png);
+  background-size: cover;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  pointer-events: none;
-  z-index: 10000;
+  z-index: 1000;
+  cursor: pointer;
+}
+
+.click-wrap {
+  top: 53%;
+  left: 58%;
+  transform: translate(-50%, -50%);
+  height: 100px;
+}
+
+.click-message {
+  animation-name: floating;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes floating {
+  0% {
+    top:100%;
+  }
+  
+  16.6666% {
+    top:66.6666%;
+  }
+  
+  33.3333% {
+    top:33.3333%;
+  }
+  
+  100% {
+    top:0%;
+  }
+}
+
+.click-message > img {
+  height: 24px;
+}
+
+.click-message > span {
+  font-family: 'DungGeunMo';
+  font-size: 24px;
+  color:white;
+  margin-right:10px;
 }
 
 /* 포트폴리오 */
