--- a/resource/common.css
+++ b/resource/common.css
@@ -74,7 +74,7 @@ body {
 .top-bar {
   position: fixed;
   z-index: 100;
-  width: 100%;
+  width: 1920px;
   top: 0;
   left: 0;
   padding: 0 150px;
@@ -157,10 +157,10 @@ body {
 }
 
 .click-wrap {
-  top: 53%;
+  top: 50%;
   left: 58%;
   transform: translate(-50%, -50%);
-  height: 100px;
+  height: 70px;
 }
 
 .click-message {
@@ -221,7 +221,7 @@ body {
 }
 
 .pf-img-4 {
-  top:22%;
+  top:19%;
   left:76.5%;
   pointer-events: none;
 }
@@ -230,7 +230,7 @@ body {
   width:1140px;
   height:730px;
   margin-left:390px;
-  margin-top:150px;
+  margin-top:100px;
 }
 
 .portfolio > div {
