--- a/docs/resource/common.css
+++ b/docs/resource/common.css
@@ -1,17 +1,14 @@
 /* 폰트 */
 @font-face {
-  font-family: "COCOGOOSE";
-  src: url("//db.onlinewebfonts.com/t/d14035f6b1afeabafbee4abb2ebf0fc6.eot");
-  src: url("//db.onlinewebfonts.com/t/d14035f6b1afeabafbee4abb2ebf0fc6.eot?#iefix") format("embedded-opentype"),
-    url("//db.onlinewebfonts.com/t/d14035f6b1afeabafbee4abb2ebf0fc6.woff2") format("woff2"),
-    url("//db.onlinewebfonts.com/t/d14035f6b1afeabafbee4abb2ebf0fc6.woff") format("woff"),
-    url("//db.onlinewebfonts.com/t/d14035f6b1afeabafbee4abb2ebf0fc6.ttf") format("truetype"),
-    url("//db.onlinewebfonts.com/t/d14035f6b1afeabafbee4abb2ebf0fc6.svg#COCOGOOSE") format("svg");
+  font-family: 'GmarketSansBold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'DungGeunMo';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/DungGeunMo.woff') format('woff');
+  font-family: 'GmarketSansMedium';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -39,11 +36,6 @@ a {
   text-decoration: none;
 }
 
-body {
-  min-width: 1920px;
-  background-image: url(img/background.jpg);
-}
-
 /* 라이브러리 */
 .img-box>img {
   display: block;
@@ -63,6 +55,13 @@ body {
 }
 
 /* 커스텀 */
+body {
+  min-width: 1920px;
+  background-image: url(img/background.jpg);
+  overflow:hidden;
+  font-family: 'GmarketSansMedium';
+}
+
 /* 로딩화면 */
 .loading-box {
   position: fixed;
@@ -70,7 +69,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: #fff;
   z-index: 1000;
   transition: opacity 0.3s, visibility 0.3s;
 }
@@ -99,7 +98,7 @@ body {
   width: 190px;
   height: 100px;
   font-size: 20px;
-  font-family: "COCOGOOSE";
+  font-family: 'GmarketSansBold';
   color: #333;
 }
 
@@ -126,28 +125,13 @@ body {
   top: 85%;
 }
 
-.main-text {
-  font-family: 'COCOGOOSE';
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 80px;
-  color: #A37CC9;
-  text-shadow: 2px 2px 4px #000;
-}
-
 .hm-img-1 {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  pointer-events: none;
 }
 
 /* 자기소개 */
 
 .am-img-1 {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   pointer-events: none;
 }
 
@@ -216,7 +200,7 @@ body {
 }
 
 .pf-content>div {
-  padding: 15px 20px;
+  padding: 20px;
 }
 
 .pf-img>span {
@@ -301,7 +285,7 @@ body {
 }
 
 .ct-form-3 {
-  top: 676px;
+  top: 680px;
   left: 1050px;
 }
 
@@ -339,8 +323,8 @@ button {
   border: 0;
   outline: 0;
   background-color: inherit;
-  font-family: 'COCOGOOSE';
-  font-size: 25px;
+  font-family: 'GmarketSansBold';
+  font-size: 24px;
   color: #535050;
 }
 
